fix: fix misaligned checkbox

--- a/sass/themes/payin/default/components/_payin-form.scss
+++ b/sass/themes/payin/default/components/_payin-form.scss
@@ -445,6 +445,7 @@ button.payment-button {
 .form__field--permission {
   input[type=checkbox] {
     top: 20px;
+    left: 0;
   }
 }
 
